--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -45,40 +45,38 @@
   <ItemGroup>
     <Compile Include="Amazon\LinkedList\AMZ_LNK_LST_ALL.cs" />
     <Compile Include="Amazon\Array\AMZ_ARR_ALL.cs" />
-    <Compile Include="Microsoft\Ms_Array.cs" />
+    <Compile Include="Arrays\ReverseArray.cs" />
     <Compile Include="Microsoft\MS_Dyn_Prog.cs" />
     <Compile Include="Microsoft\MS_Graph.cs" />
     <Compile Include="Microsoft\MS_LINKED_LIST.cs" />
     <Compile Include="Microsoft\MS_Tree.cs" />
     <Compile Include="Microsoft\OOPS\StockMarket.cs" />
+    <Compile Include="Strings\IsPalindromePermutation.cs" />
+    <Compile Include="Utils\Array.cs" />
     <Compile Include="Utils\LinkedList.cs" />
-    <Compile Include="HackerRank\Implementation\GradeShift.cs" />
-    <Compile Include="HackerRank\Stack\MatchingBrackets.cs" />
-    <Compile Include="HackerRank\Stack\MaxStack - Copy.cs" />
-    <Compile Include="HackerRank\String\AllInOne.cs" />
-    <Compile Include="HackerRank\Warmup\MinMax.cs" />
-    <Compile Include="HackerRank\Warmup\TallestCandles.cs" />
-    <Compile Include="HackerRank\Warmup\TimeConversion.cs" />
-    <Compile Include="HackerRank\Warmup\Staircase.cs" />
-    <Compile Include="HackerRank\Warmup\FractionNumbers.cs" />
-    <Compile Include="HackerRank\Warmup\DiagonalDifference.cs" />
-    <Compile Include="HackerRank\WeekOfCode\Minseries.cs" />
+    <Compile Include="Stack\MatchingBrackets.cs" />
+    <Compile Include="Stack\MaxStack - Copy.cs" />
+    <Compile Include="Strings\AllInOne.cs" />
+    <Compile Include="Arrays\MinMax.cs" />
+    <Compile Include="Arrays\TallestCandles.cs" />
+    <Compile Include="Matrix\DiagonalDifference.cs" />
+    <Compile Include="Strings\Minseries.cs" />
     <Compile Include="LinkedList\Permutations.cs" />
     <Compile Include="Microsoft\String\MS_String.cs" />
     <Compile Include="OOD\UberFood.cs" />
     <Compile Include="Recursion\Permutations.cs" />
     <Compile Include="Stack\StackInArray.cs" />
-    <Compile Include="StringsandArrays\MaximumSubArray.cs" />
-    <Compile Include="StringsandArrays\ArrayLeftRotation.cs" />
-    <Compile Include="StringsandArrays\Fibonacci.cs" />
-    <Compile Include="StringsandArrays\ReplaceSpace.cs" />
+    <Compile Include="Arrays\MaximumSubArray.cs" />
+    <Compile Include="Arrays\ArrayLeftRotation.cs" />
+    <Compile Include="Strings\Fibonacci.cs" />
+    <Compile Include="Strings\ReplaceSpace.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="StringsandArrays\Anagram.cs" />
-    <Compile Include="StringsandArrays\CountCompression.cs" />
-    <Compile Include="StringsandArrays\ReverseString.cs" />
-    <Compile Include="StringsandArrays\RotateMatrix.cs" />
-    <Compile Include="StringsandArrays\UniquesCharacters.cs" />
+    <Compile Include="Strings\Anagram.cs" />
+    <Compile Include="Strings\CountCompression.cs" />
+    <Compile Include="Strings\ReverseString.cs" />
+    <Compile Include="Strings\RotateMatrix.cs" />
+    <Compile Include="Strings\UniquesCharacters.cs" />
     <Compile Include="Trees\CheckBst.cs" />
     <Compile Include="Utils\Queue.cs" />
     <Compile Include="Utils\Stack.cs" />
