--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Amazon\LinkedList\AMZ_LNK_LST_ALL.cs" />
     <Compile Include="Amazon\Array\AMZ_ARR_ALL.cs" />
+    <Compile Include="Arrays\FindOrderBreaker.cs" />
+    <Compile Include="Arrays\FindMinRotatedArray.cs" />
     <Compile Include="Arrays\ReverseArray.cs" />
     <Compile Include="Microsoft\MS_Dyn_Prog.cs" />
     <Compile Include="Microsoft\MS_Graph.cs" />
