--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -43,23 +43,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Amazon\LinkedList\AMZ_LNK_LST_ALL.cs" />
     <Compile Include="Amazon\Array\AMZ_ARR_ALL.cs" />
+    <Compile Include="Arrays\Anagrams.cs" />
     <Compile Include="Arrays\ProductArray.cs" />
     <Compile Include="Arrays\MinDistance.cs" />
     <Compile Include="Arrays\MinAvgSubArray.cs" />
     <Compile Include="Arrays\LargeSumInConArray.cs" />
     <Compile Include="Arrays\FindOrderBreaker.cs" />
     <Compile Include="Arrays\FindMinRotatedArray.cs" />
+    <Compile Include="Arrays\RearrangeZeros.cs" />
     <Compile Include="Arrays\ReverseArray.cs" />
+    <Compile Include="LinkedList\MergeList.cs" />
+    <Compile Include="LinkedList\FindLoop.cs" />
+    <Compile Include="Matrix\FillBooleanArray.cs" />
+    <Compile Include="Matrix\FindinSorted.cs" />
+    <Compile Include="Matrix\FindWord.cs" />
+    <Compile Include="Matrix\ShortestPathMatrix.cs" />
+    <Compile Include="Matrix\UniqueRows.cs" />
     <Compile Include="Microsoft\MS_Dyn_Prog.cs" />
     <Compile Include="Microsoft\MS_Graph.cs" />
-    <Compile Include="Microsoft\MS_LINKED_LIST.cs" />
+    <Compile Include="Microsoft\MS_Stk_Que.cs" />
     <Compile Include="Microsoft\MS_Tree.cs" />
     <Compile Include="Microsoft\OOPS\StockMarket.cs" />
+    <Compile Include="Recursion\DiceRoll.cs" />
+    <Compile Include="Recursion\PrintBinaryNumbers.cs" />
+    <Compile Include="Sorting\SelectionSort.cs" />
     <Compile Include="Strings\IsPalindromePermutation.cs" />
     <Compile Include="Strings\ReverseInteger.cs" />
+    <Compile Include="Strings\StringCompression.cs" />
+    <Compile Include="Strings\UniqueVariation.cs" />
     <Compile Include="Strings\TwoSumTarget.cs" />
+    <Compile Include="Practice1.cs" />
     <Compile Include="TemplateClass.cs" />
     <Compile Include="Utils\Array.cs" />
     <Compile Include="Utils\LinkedList.cs" />
@@ -70,7 +84,7 @@
     <Compile Include="Arrays\TallestCandles.cs" />
     <Compile Include="Matrix\DiagonalDifference.cs" />
     <Compile Include="Strings\Minseries.cs" />
-    <Compile Include="LinkedList\Permutations.cs" />
+    <Compile Include="LinkedList\MustKnow.cs" />
     <Compile Include="Microsoft\String\MS_String.cs" />
     <Compile Include="OOD\UberFood.cs" />
     <Compile Include="Recursion\Permutations.cs" />
