--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Amazon\Array\AMZ_ARR_ALL.cs" />
     <Compile Include="Arrays\Anagrams.cs" />
     <Compile Include="Arrays\BinarySearch.cs" />
+    <Compile Include="Arrays\StockSellBuy.cs" />
     <Compile Include="Arrays\LeadersinArray.cs" />
     <Compile Include="Arrays\IsSubArray.cs" />
     <Compile Include="Arrays\ProductArray.cs" />
