--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -59,6 +59,7 @@
     <Compile Include="Arrays\RearrangeZeros.cs" />
     <Compile Include="Arrays\ReverseArray.cs" />
     <Compile Include="DynamicProgramming\WordBreak.cs" />
+    <Compile Include="LinkedList\InterSesction.cs" />
     <Compile Include="LinkedList\ReversePrintUsingStack.cs" />
     <Compile Include="LinkedList\MergeList.cs" />
     <Compile Include="LinkedList\FindLoop.cs" />
