--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -77,6 +77,7 @@
     <Compile Include="DynamicProgramming\MagicIndex.cs" />
     <Compile Include="Recursion\ListDirectoryFiles.cs" />
     <Compile Include="Sorting\BubbleSort.cs" />
+    <Compile Include="Strings\Math.Pow.cs" />
     <Compile Include="Trees\BSTInsert.cs" />
     <Compile Include="Trees\InvertBinaryTree.cs" />
     <Compile Include="Trees\MinimalDepth.cs" />
