--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Arrays\TwoSumTarget.cs" />
     <Compile Include="Matrix\FindWord.cs" />
     <Compile Include="Trees\RootToLeafSum.cs" />
+    <Compile Include="Trees\TargetSum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
