--- a/CrackingBook/CrackingBook.csproj
+++ b/CrackingBook/CrackingBook.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Matrix\FindWord.cs" />
     <Compile Include="Trees\RootToLeafSum.cs" />
     <Compile Include="Trees\TargetSum.cs" />
+    <Compile Include="Arrays\SmallestDiff.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
